Adding framework for restaurants page

--- a/my-app/src/styles/OrderPage.css
+++ b/my-app/src/styles/OrderPage.css
@@ -29,6 +29,11 @@
     padding-left: 20px;
     padding-right: 20px;
 }
+
+.openStatus {
+    color: #C3EC99;
+}
+
 .firstLine
 {
     font-style: italic;
