--- a/my-app/src/styles/Signup.css
+++ b/my-app/src/styles/Signup.css
@@ -31,7 +31,7 @@ h3 {
 }
 
 input {
-    background: #D9D9D9;
+    background: #d9d9d9;
     width: 200px;
     height: 20px;
 }
@@ -40,7 +40,7 @@ label {
     font-weight: 400;
     font-size: 20px;
     line-height: 25px;
-    color: #000000;
+    color: #000;
 }
 
 form {
