--- a/frontend/src/styles/RestaurantDetails.css
+++ b/frontend/src/styles/RestaurantDetails.css
@@ -3,17 +3,15 @@
     font-weight: 400;
 }
 
-.RestaurantBanner {
+.RestaurantBanner {   
     background-color: #033453;
-    padding: 0;
-    margin: 0;
-    border: 0;
+    padding: 1em;
+    border-top: 1px solid gray;
     display: grid;
-    grid-template-columns: min-content auto;
     grid-template-areas:
-        "image firstline search"
-        "image secondline search"
-        "image thirdline search";
+        "firstline search"
+        "secondline search"
+        "thirdline search";
     max-height: 180px;
     color: #FFFFFF;
 }
@@ -109,7 +107,7 @@
     color: #000000;
 }
 
-.menu {
+.restaurantMenu {
     grid-area: menu;
     background: #FCFCFC;
     margin: 1em;
