--- a/frontend/src/styles/Header.css
+++ b/frontend/src/styles/Header.css
@@ -55,7 +55,7 @@ h1 a{
     text-decoration: none;
 }
 
-.menu{
+.menu-header{
     display: flex;
 width: 100%;
 justify-content: space-evenly;
@@ -63,13 +63,13 @@ opacity: 0.95;
 position: relative;
 }
 
-.menu li{
+.menu-header li{
     text-decoration: none;
     padding-left: 2%;
     list-style: none;
 }
 
-.menu li a{
+.menu-header li a{
     color: white;
     text-decoration: none;
 }
