--- a/frontend/src/styles/Admin.css
+++ b/frontend/src/styles/Admin.css
@@ -19,10 +19,13 @@
 
 .restaurantsList {
     list-style: none;
-    font-family: 'Unna';
     font-weight: 500;
     font-size: 24px;
     color: #000000;
+    display: flex;
+    flex-direction: column;
+    justify-content:space-evenly;
+    height: 50vh;
 }
 
 .restaurantSection {
@@ -144,4 +147,34 @@
     grid-column-gap: 10px;
     align-items: center;
     padding-bottom: 10px;
+}
+
+
+.restaurantListItem {
+    cursor: pointer;
+}
+
+.restaurantHeader {
+    border-bottom: 1px solid grey;
+    display: flex;
+    flex-direction: row;
+    place-content: space-between;
+}
+
+#restaurantTitle {
+    padding: 0px 0px 5px 15px;
+    font-weight: bold;
+}
+
+.addRestoButton {
+    background-color: transparent;
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    margin-right: 15px;
+    border: 2px solid #ccc;
+    color: grey;
+    font-size: larger;
+    font-weight: bolder;
+    align-self: center;
 }
