--- a/frontend/src/styles/Admin.css
+++ b/frontend/src/styles/Admin.css
@@ -19,8 +19,6 @@
 
 .restaurantsList {
     list-style: none;
-    font-weight: 500;
-    font-size: 24px;
     color: #000000;
     display: flex;
     flex-direction: column;
@@ -148,9 +146,11 @@
     align-items: center;
     padding-bottom: 10px;
 }
-
-
 .restaurantListItem {
+    font-weight: 500;
+    font-size: 24px;
+    background-color: transparent;
+    border: none;
     cursor: pointer;
 }
 
