--- a/frontend/src/styles/Admin.css
+++ b/frontend/src/styles/Admin.css
@@ -49,7 +49,7 @@
 }
 
 .adminRestaurantBanner {
-    padding: 3em;
+    padding: 2em;
     grid-area: adminRestaurantBanner;
     background-color: #FCFCFC;
     display: grid;
@@ -85,25 +85,25 @@
 }
 
 .menuItemForm {
-    position: relative;
     float: right;
-    display: flex;
-    flex-direction: row;
 }
 
 .menuButton {
     border-radius: 10px;
-    margin: 10px;
-    height: 2em;
+    margin: 1em;
+    padding: 8px;
     background-color: #3A6179;
     color: white;
+    font-size: 1em;
 }
 
 .restaurantButton {
-    border-radius: 10px;
+    background-color: transparent;
+    border: none;
+    font-size: 1.25em;
+    display: flex;
+    align-self: end;
     margin: 10px;
-    margin-right: 3em;
-    height: 2em;
 }
 
 .menuSearchBar::placeholder {
@@ -168,13 +168,18 @@
 
 .addRestoButton {
     background-color: transparent;
-    border-radius: 50%;
+
     width: 35px;
     height: 35px;
     margin-right: 15px;
-    border: 2px solid #ccc;
+    border: none;
     color: grey;
-    font-size: larger;
+    font-size: x-large;
     font-weight: bolder;
     align-self: center;
+}
+
+.buttonText {
+    margin-right: 1em;
+    cursor: pointer;
 }
