--- a/frontend/src/styles/Admin.css
+++ b/frontend/src/styles/Admin.css
@@ -17,7 +17,7 @@
     margin: 1em;
 }
 
-.restaurantsList {
+.restaurantsList ul {
     list-style: none;
     color: #000000;
     display: flex;
@@ -31,7 +31,7 @@
     background: #FCFCFC;
     margin: 1em;
     display: grid;
-    grid-template-rows: 1fr 5fr 1fr;
+    grid-template-rows: 1fr 10fr 1fr;
     grid-template-areas:
         "adminRestaurantBanner"
         "menuItems"
@@ -65,6 +65,11 @@
     margin: 0;
 }
 
+.restaurant-name{
+    font-weight: bold;
+    font-size: 1.25em;
+}
+
 .restaurantImage {
     grid-area: image;
     height: 150px;
@@ -77,11 +82,13 @@
 
 .restaurantButtons {
     grid-area: buttons;
-    position: relative;
     top: 50%;
-    float: right;
+}
+
+.restaurantButtons form {
     display: flex;
     flex-direction: column;
+    float: right;
 }
 
 .menuItemForm {
@@ -182,4 +189,59 @@
 .buttonText {
     margin-right: 1em;
     cursor: pointer;
+}
+
+/*Mobile*/
+@media (max-width:425px) {
+    .adminMainBody {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas:
+            "restaurants"
+            "restaurantInfo";
+        height: 100vh;
+        width: 100%;
+    }
+
+    .restaurants, .restaurantSection, .adminRestaurantBanner, .menuItems, .menuButtons {
+        width: 100vw;
+        margin: 0;
+        padding: 0;
+    }
+
+    .restaurantSection {
+        border-top: 1px solid grey;
+    }
+
+    .restaurantsList {
+        height: 20vh;
+    }
+
+    .restaurantsList ul {
+        height: 100%;
+        overflow-y: scroll;
+    }
+
+    .adminRestaurantBanner {
+        grid-template-areas:
+            "firstline"
+            "secondline"
+            "thirdline"
+            "buttons";
+    }
+
+    .restaurantButtons {
+        width: 100vw;
+        margin: 0;
+    }
+
+    .firstLine, .secondLine, .thirdLine {
+        line-height: 2em;
+        font-size: 1.25em;
+        margin-left: 1em;
+    }
+
+    .restaurantSection {
+        grid-template-rows: 1fr 8fr 1fr;
+    }
 }
