--- a/frontend/src/styles/Admin.css
+++ b/frontend/src/styles/Admin.css
@@ -1,3 +1,7 @@
+.body {
+    background-image: none;
+}
+
 .AdminPage {
     font-family: 'Unna', serif;
     font-weight: 400;
@@ -100,7 +104,7 @@
     background-color: #3A6179;
     color: white;
     font-size: 1em;
-    height: 3.5em;
+    height: 2em;
 }
 
 .restaurantButton {
@@ -170,6 +174,7 @@
 #restaurantTitle {
     padding: 0px 0px 5px 15px;
     font-weight: bold;
+    font-size: 1.35em;
 }
 
 .addRestoButton {
@@ -269,6 +274,7 @@
 
     .restaurantsList {
         height: 20vh;
+        padding-bottom: 1em;
     }
 
     .restaurantsList ul {
@@ -282,6 +288,7 @@
             "secondline"
             "thirdline"
             "buttons";
+        padding: 2em 0 2em 0;
     }
 
     .restaurantButtons {
@@ -291,11 +298,11 @@
 
     .firstLine, .secondLine, .thirdLine {
         line-height: 2em;
-        font-size: 1.25em;
+        font-size: 1.2em;
         margin-left: 1em;
     }
 
     .restaurantSection {
-        grid-template-rows: 1fr 8fr 1fr;
+        grid-template-rows: 1fr 6fr 1fr;
     }
 }
