--- a/frontend/src/styles/Popup.css
+++ b/frontend/src/styles/Popup.css
@@ -8,7 +8,11 @@
     left: 0;
     
   }
-  
+  .CenteringPopup{
+    display:flex;
+    height:100%;
+    align-items: center;
+  }
   .popup-container {
     width: 50%;
     margin: 0 auto;
@@ -18,7 +22,6 @@
     padding: 1em;
     border: 1px solid #999;
     overflow-y: auto;
-    margin-top: 15%;
   }
   
   .close-icon {
