Adding more functionality to account page
Added google auto complete for city
Added some other functionality.
Need to fix styling

--- a/frontend/src/styles/Account.css
+++ b/frontend/src/styles/Account.css
@@ -36,10 +36,11 @@ a {
     flex: auto;
 }
 .countryCode{
-    width:50%;
+    width:30%;
+    margin-left: auto;
 }
 .phoneNumber{
-    width:50%;
+    width:40%;
 }
 #pCode{
     white-space: nowrap;
@@ -172,7 +173,7 @@ a {
 }
 
 
-.currentLocation {
+.deliveryLocation {
     grid-area: current;
     min-width:0;
 }
