--- a/frontend/src/styles/Account.css
+++ b/frontend/src/styles/Account.css
@@ -139,7 +139,7 @@ a {
         "street street street street street street"
         "info info info info info info"
         "current current current current current current"
-        ". . . . . save";
+        ". . . . cancel save";
         
 }
 
@@ -194,6 +194,23 @@ a {
     height: 30px;
 }
 
+#cancelButton {
+    grid-area: cancel;
+    margin-top: 20px;
+    margin-right: 6px;
+    height: 100%;
+    margin-bottom: 10px;
+    display:flex;
+}
+
+#cancelButtonBtn{
+    width:200px;
+    padding:0;
+    margin-left: auto;
+    height: 30px;
+    text-align: center; 
+}
+
 #OrderHistory {
     font-size: 2rem;
     margin-right: auto;
@@ -225,7 +242,7 @@ a {
             "street street street street street street"
             "info info info info info info"
             "current current current current current current"
-            ". . . save save save";
+            ". . . . cancel save";
     }
     #changePassword{
         font-size: .6em;
