--- a/frontend/src/styles/Account.css
+++ b/frontend/src/styles/Account.css
@@ -135,7 +135,18 @@ a {
         "street street street street street street"
         "province province postal postal country country"
         "current current current current current current"
-        ". . . . . save";
+        ". . . . cancel save";
+        
+}
+
+.province{
+    width: 33%;
+}
+.postal{
+    width: 33%;
+}
+.country{
+    width: 33%;
 }
 
 .firstName {
@@ -184,6 +195,23 @@ a {
     margin-right: 10px;
 }
 
+#cancelButton {
+    grid-area: cancel;
+    margin-top: 20px;
+    margin-right: 6px;
+    height: 100%;
+    margin-bottom: 10px;
+    display:flex;
+}
+
+#cancelButtonBtn{
+    width:200px;
+    padding:0;
+    margin-left: auto;
+    height: 30px;
+    text-align: center; 
+}
+
 #OrderHistory {
     font-size: 2rem;
     margin-right: auto;
@@ -202,6 +230,20 @@ a {
     }
 
     h2 {
-        font-size: 1em;
+        font-size: .50em;
+    }
+    .ProfileInformation {
+        display: grid;
+        grid-template-areas:
+            "FLName FLName FLName FLName FLName FLName"
+            "email email email email email email"
+            "countryPhone countryPhone countryPhone countryPhone countryPhone countryPhone"
+            "street street street street street street"
+            "info info info info info info"
+            "current current current current current current"
+            ". . . . cancel save";
+    }
+    #changePassword{
+        font-size: .6em;
     }
 }
