--- a/frontend/src/styles/Account.css
+++ b/frontend/src/styles/Account.css
@@ -1,275 +1,47 @@
-* {
-    font-family: 'Unna', serif;
+
+
+#reqFontSymb{
+
+    color: red;
+    margin:0;
+
+}
+
+#reqFont{
+    margin:0;
+    font-size: 20px;
+    letter-spacing: 0px;
+    word-spacing: 0px;
+    color: #000000;
     font-weight: 400;
+    text-decoration: none solid rgb(68, 68, 68);
+    font-style: italic;
+    font-variant: normal;
+    text-transform: none;
+
 }
 
-.Account a {
-    color: darkblue;
-    text-decoration: none;
+.myButton {
+	box-shadow: 0px 0px 0px 2px #ffb803;
+	background:linear-gradient(to bottom, #a87f2d 5%, #ffb803 100%);
+	background-color:#a87f2d;
+	border-radius:10px;
+	border:1px solid #debf71;
+	display:inline-block;
+	cursor:pointer;
+	color:#003345;
+	font-family:Arial;
+	font-size:19px;
+	padding:12px 37px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #fadd9b;
+}
+.myButton:hover {
+	background:linear-gradient(to bottom, #ffb803 5%, #a87f2d 100%);
+	background-color:#ffb803;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
 }
 
-
-.Account .backgroundEffect {
-    background-color: darkblue;
-    display: flex;
-}
-.Account .info {
-    grid-area: info;
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    flex: auto;
-}
-
-.Account .countryPhone{
-    grid-area: countryPhone;
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    flex: auto;
-}
-.Account .FLName{
-    grid-area: FLName;
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    flex: auto;
-}
-.Account .countryCode{
-    width:30%;
-    margin-left: auto;
-}
-.Account .phoneNumber{
-    width:40%;
-}
-.Account #pCode{
-    white-space: nowrap;
-}
-
-.AccountPage {
-    background-color: white;
-    width: 95%;
-    height: 95%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 10px;
-    display: grid;
-    grid-template-rows: 1fr 1fr;
-}
-
-.Account .profileSide {
-    grid-column: 1;
-}
-
-.Account .profileToolBar {
-    display: flex;
-    justify-content: space-between;
-    padding: 0 20px;
-    align-items: center;
-    font-size: 2rem;
-    overflow: hidden;
-    border-bottom: solid black 2px;
-}
-
-.Account .standardLayout {
-    display: grid;
-    grid-template-columns: auto auto;
-    grid-template-areas:
-        "title required"
-        "input input";
-    margin: 0px 10px;
-    justify-content: space-between;
-}
-
-.Account .standardLayout h2:first-of-type {
-    grid-area: title;
-    margin: 10px;
-}
-
-.Account .required {
-    grid-area: required;
-    margin: 10px;
-    color: gray;
-}
-
-.Account .standardLayout input {
-    grid-area: input;
-    background-color: lightgray;
-    border: 0;
-    height: 120%;
-    margin-bottom: 10px;
-    min-width: 0;
-}
-
-.Account .twoLayout {
-    display: grid;
-    grid-template-columns: auto auto;
-    grid-template-areas:
-        "title required"
-        "input input";
-    margin: 0px 10px;
-    justify-content: space-between;
-}
-
-.Account .twoLayout h2:first-of-type {
-    grid-area: title;
-    margin: 10px;
-}
-
-.Account .twoLayout input {
-    grid-area: input;
-    background-color: lightgray;
-    border: 0;
-    height: 120%;
-    margin-bottom: 10px;
-}
-
-.Account .orderSide {
-    grid-column: 2;
-    background-color: pink;
-}
-
-
-.Account .ProfileInformation {
-    display: grid;
-    grid-template-areas:
-        "FLName FLName FLName FLName FLName FLName"
-        "email email email email email email"
-        "countryPhone countryPhone countryPhone countryPhone countryPhone countryPhone"
-        "street street street street street street"
-        "info info info info info info"
-        "current current current current current current"
-        ". . . . cancel save";
-        
-}
-
-.Account .province{
-    width: 33%;
-}
-.Account .postal{
-    width: 33%;
-}
-.Account .country{
-    width: 33%;
-}
-
-.Account .firstName {
-    width: 50%;
-}
-
-.Account .lastName {
-    width:50%;
-}
-
-.Account .emailDiv {
-    grid-area: email;
-    min-width:0;
-}
-
-
-.Account .streetAddress {
-    grid-area: street;
-    min-width:20vw;
-}
-
-
-.Account .postal {
-    grid-area: postal;
-}
-
-.Account .country {
-    grid-area: country;
-}
-
-.Account .deliveryLocation {
-    grid-area: current;
-    min-width:0;
-}
-
-.Account #saveButton {
-    grid-area: save;
-    margin-top: 20px;
-    margin-right: 6px;
-    height: 100%;
-    margin-bottom: 10px;
-    display:flex;
-}
-
-.Account #saveButtonBtn{
-    width:200px;
-    padding:0;
-    margin-left: auto;
-    height: 30px;
-}
-
-.Account #cancelButton {
-    grid-area: cancel;
-    margin-top: 20px;
-    margin-right: 6px;
-    height: 100%;
-    margin-bottom: 10px;
-    display:flex;
-}
-
-.Account #cancelButtonBtn{
-    width:200px;
-    padding:0;
-    margin-left: auto;
-    height: 30px;
-    text-align: center; 
-}
-
-.Account #cancelButton {
-    grid-area: cancel;
-    margin-top: 20px;
-    margin-right: 6px;
-    height: 100%;
-    margin-bottom: 10px;
-    display:flex;
-}
-
-.Account #cancelButtonBtn{
-    width:200px;
-    padding:0;
-    margin-left: auto;
-    height: 30px;
-    text-align: center; 
-}
-
-.Account #OrderHistory {
-    font-size: 2rem;
-    margin-right: auto;
-    margin-left: 15px;
-    display: flex;
-}
-
-.Account .orderHistoryToolBar {
-    border-bottom: solid black 2px;
-}
-
-
-
-@media (max-width: 900px) {
-    .AccountPage {
-        display: flex;
-        flex-direction: column;
-    }
-
-    h2 {
-        font-size: .50em;
-    }
-    .Account .ProfileInformation {
-        display: grid;
-        grid-template-areas:
-            "FLName FLName FLName FLName FLName FLName"
-            "email email email email email email"
-            "countryPhone countryPhone countryPhone countryPhone countryPhone countryPhone"
-            "street street street street street street"
-            "info info info info info info"
-            "current current current current current current"
-            ". . . . cancel save";
-    }
-    #changePassword{
-        font-size: .6em;
-    }
-}
