Items can be added to cart

--- a/frontend/src/styles/RestaurantDetails.css
+++ b/frontend/src/styles/RestaurantDetails.css
@@ -150,4 +150,13 @@
 
 .menu-list .menu-item{
     margin: 20px;
+    padding: 30px;
+}
+
+.add-to-cart {
+    float: right;
+}
+
+.cart-item {
+    list-style: none;
 }
