--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -29,55 +29,82 @@ body{
 }
 
 
-.categories{
+.HomePage .categories{
     grid-area: categories;
 }
-.SplashScreen{
+.HomePage .SplashScreen{
     position: relative;
     grid-area: splash;
-    height: 100%;
+    height: 300px;
     width: 100%;
     justify-self: center;
-    z-index: -1;
+    z-index: 0;
+    margin-bottom: 15px;
 }
-.SplashScreen img{
+.HomePage .SplashScreen .slide img{
     height: 300px;
-    object-fit: fill;
+    object-fit: cover;
     width: 100%;
 }
-.restaurantList{
+.hideInitally{
+    display:none;
+}
+.HomePage .restaurantList{
     grid-area: list;
 }
-.restaurantList img{
+.HomePage .restaurantList img{
     height: 100px;
     object-fit: cover;
 }
-#orderNow{
+.HomePage #orderNow{
+    z-index: 2;
     position: absolute;
     right:0px;
     font-size: 24px;
-    bottom: 4px;
+    bottom: 0px;
     color: white;
     background-color: #033453;
     padding-left: 10px;
     padding-right:10px;
 }
-.SearchBar{
+.HomePage .prev{
+    position: absolute;
+    left:0px;
+    cursor: pointer;
+    font-size: 24px;
+    top: 150px;
+    color: white;
+    background-color: #033453;
+    padding-left: 10px;
+    padding-right:10px; 
+}
+.HomePage .next{
+    position: absolute;
+    cursor: pointer;
+    right:0px;
+    font-size: 24px;
+    top: 150px;
+    color: white;
+    background-color: #033453;
+    padding-left: 10px;
+    padding-right:10px; 
+}
+.HomePage .SearchBar{
     width: 100%;
     overflow:hidden;
     border-radius: 5px;
 }
-.SearchBar input{
+.HomePage .SearchBar input{
     background-color: #F6F6F3;
     padding-left:10px;
 }
-.list{
+.HomePage .list{
     background-color: #f0f1f1;
     padding: 15px;
     margin-top: 5px;
     border-radius: 5px;
 }
-.restaurantsHomePage{
+.HomePage .restaurantsHomePage{
     display: grid;
     grid-template-areas:
         "logo name . . rating"
